:test_tube: test: Finaliza implementação de testes unitários